<resources>
    <string name="app_name">PulsePlanner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_exercise">Create Exercise</string>
    <string name="menu_category">Manage Categories</string>
    <string name="menu_exercise_overview">Exercise Overview</string>
    <string name="menu_add_training">Create Training</string>
    <string name="menu_training_overview">Training Overview</string>
    <string name="menu_settings">Settings</string>

</resources>