<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_add_training"
            android:icon="@drawable/ic_menu_exercise"
            android:title="@string/menu_add_training" />

        <item
            android:id="@+id/nav_exercise"
            android:icon="@drawable/ic_menu_exercise"
            android:title="@string/menu_exercise" />

        <item
            android:id="@+id/nav_exercise_overview"
            android:icon="@drawable/ic_menu_exercise"
            android:title="@string/menu_exercise_overview" />

        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_category"
            android:title="@string/menu_category" />

        <item
            android:id="@+id/nav_settings_menu"
            android:icon="@drawable/ic_menu_category"
            android:title="@string/menu_settings" />
    </group>
</menu>