<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pulseplanner.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.pulseplanner.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.pulseplanner.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_exercise_overview"
        android:name="com.example.pulseplanner.ui.exerciseoverview.ExerciseOverviewFragment"
        android:label="@string/menu_exercise"
        tools:layout="@layout/fragment_exercise_overview" />

    <fragment
        android:id="@+id/nav_exercise"
        android:name="com.example.pulseplanner.ui.exercise.ExerciseFragment"
        android:label="@string/menu_exercise"
        tools:layout="@layout/fragment_exercise" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.pulseplanner.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

</navigation>